--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -2,7 +2,7 @@
 <html class="x-admin-sm">
 <head>
     <meta charset="UTF-8">
-    <title>后台登录-红衣</title>
+    <title>后台管理-红衣</title>
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
@@ -13,8 +13,9 @@
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="../../lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="../../js/xadmin.js"></script>
-    <script src="../../js/user/logout.js" charset="utf-8"></script>
+    <script src="../../js/user/user.js" charset="utf-8"></script>
     <script src="../../js/common/common.js" charset="utf-8"></script>
+    <script src="../../js/common/load.js" charset="utf-8"></script>
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -66,7 +67,7 @@
                 <dd>
                     <a onclick="xadmin.open('切换帐号','http://www.baidu.com')">切换帐号</a></dd>
                 <dd>
-                    <a href="#" id='logout'>退出</a></dd>
+                    <a href="javascript:void(0);" id='logout' onclick="logout()">退出</a></dd>
             </dl>
         </li>
         <li class="layui-nav-item to-index">
@@ -96,7 +97,7 @@
                             <cite>会员列表(静态表格)</cite></a>
                     </li>
                     <li>
-                        <a onclick="xadmin.add_tab('会员列表(动态表格)','member-list1.html',true)">
+                        <a onclick="xadmin.add_tab('会员列表(动态表格)','member-list.html',true)">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>会员列表(动态表格)</cite></a>
                     </li>
