用户管理基本完成

--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -92,9 +92,9 @@
                             <cite>统计页面</cite></a>
                     </li>
                     <li>
-                        <a onclick="xadmin.add_tab('会员列表(静态表格)','member-list.html')">
+                        <a onclick="xadmin.add_tab('用户管理','member-list.html')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>会员列表(静态表格)</cite></a>
+                            <cite>用户管理</cite></a>
                     </li>
                     <li>
                         <a onclick="xadmin.add_tab('会员列表(动态表格)','member-list.html',true)">
