--- a/frontend/admin/member-password.html
+++ b/frontend/admin/member-password.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="/css/xadmin.css">
         <script type="text/javascript" src="/lib/layui/layui.js" charset="utf-8"></script>
         <script type="text/javascript" src="/js/xadmin.js"></script>
+        <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+        <script src="/js/common/common.js" charset="utf-8"></script>
         <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
         <!--[if lt IE 9]>
             <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -19,33 +21,21 @@
     <body>
         <div class="layui-fluid">
             <div class="layui-row">
-                <form class="layui-form">
-                    <div class="layui-form-item">
-                        <label for="L_username" class="layui-form-label">昵称</label>
-                        <div class="layui-input-inline">
-                            <input type="text" id="L_username" name="username" disabled="" value="小明" class="layui-input"></div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label">
-                            <span class="x-red">*</span>旧密码</label>
-                        <div class="layui-input-inline">
-                            <input type="password" id="L_repass" name="oldpass" required="" lay-verify="required" autocomplete="off" class="layui-input"></div>
-                    </div>
+                <form class="layui-form layui-col-xs-offset2">
                     <div class="layui-form-item">
                         <label for="L_pass" class="layui-form-label">
                             <span class="x-red">*</span>新密码</label>
                         <div class="layui-input-inline">
-                            <input type="password" id="L_pass" name="newpass" required="" lay-verify="required" autocomplete="off" class="layui-input"></div>
+                            <input type="password" id="L_pass" name="password" required="" lay-verify="required" autocomplete="off" class="layui-input"></div>
                         <div class="layui-form-mid layui-word-aux">6到16个字符</div></div>
                     <div class="layui-form-item">
                         <label for="L_repass" class="layui-form-label">
                             <span class="x-red">*</span>确认密码</label>
                         <div class="layui-input-inline">
-                            <input type="password" id="L_repass" name="repass" required="" lay-verify="required" autocomplete="off" class="layui-input"></div>
+                            <input type="password" id="L_repass" name="repassword" required="" lay-verify="required" autocomplete="off" class="layui-input"></div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label"></label>
-                        <button class="layui-btn" lay-filter="save" lay-submit="">增加</button></div>
+                        <button class="layui-btn layui-col-xs-offset6" lay-filter="save" lay-submit="">修改</button></div>
                 </form>
             </div>
         </div>
@@ -58,8 +48,11 @@
                 //监听提交
                 form.on('submit(save)',
                 function(data) {
-                    console.log(data);
-                    //发异步，把数据提交给php
+                    let info={};
+                    info.id=getQueryVariable('id');
+                    info.password=data.field['password'];
+                    alert(data.field['password']);
+                    $.post('/hongyi/admin/updateuserdata', JSON.stringify(info));
                     layer.alert("修改成功", {
                         icon: 6
                     },
